@@ -46,7 +46,11 @@ skip? or deprecate?
 52. cnb001781526 je blbe - je tam soubor a ten neumim zpracovavat.
 53. Check to classes like MARC::Convert::Wikidata::Item::AudioBook for MARC data
     which are for audiobook.
-54.
+54. People date could be only centuries:
+    - 14. století př. Kr.
+    - činný 14. století př. Kr.
+    - činný 15. století-16. století
+55. 
 
 Applied
 =======
